working on unit test for ingestion